v2.11.0 - Added shortcode for ASM forms - Added styling for <legend> form element - Fixed Petfinder API break on theme update

--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -21,6 +21,11 @@ label {
 	padding: 0;
 }
 
+legend {
+	font-weight: bold;
+	margin-bottom: calc-em(16px);
+}
+
 /**
  * 1. Correct color not being inherited.
  *    Known issue: affects color of disabled elements.
